--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 <body class="flex-center">
 
   <main class="article">
-      <figure class="article__figure">
-        <img src="images/drawers.jpg" alt="drawers">
-      </figure>
-      <div class="article__content spacing">
-        <p class="article__title">Shift the overall look and feel by adding these wonderful touches to furniture in your home</p>
-        <p class=article__text>Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete./<p>
-        <section class="profile">
-          <img class="profile__img" src="images/avatar-michelle.jpg" alt="avatar-michelle">
-          <div>
-            <a class="profile__author">Michelle Appleton</a>
-            <p class="profile__date">28 Jun 2020</p>
-          </div>
-          <figure>
+    <div>
+    <img class="article__img" src="images/drawers.jpg" alt="drawers">
+    </div>
+    <div class="article__content spacing">
+      <p class="article__title">Shift the overall look and feel by adding these wonderful touches to furniture in your home</p>
+      <p class=article__text>Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete./<p>
+      <section class="profile">
+        <img class="profile__img" src="images/avatar-michelle.jpg" alt="avatar-michelle">
+        <div>
+          <a class="profile__author">Michelle Appleton</a>
+          <p class="profile__date">28 Jun 2020</p>
+        </div>
+        <figure class="share-icon">
           <img src="images/icon-share.svg" alt="icon-share">
-          </figure>
-        </section>
-      </div>
+        </figure>
+      </section>
+    </div>
   </main>
-  
+
   <!-- <div class="attribution"> -->
   <!--   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. --> 
   <!--   Coded by <a href="#">Your Name Here</a>. -->
