--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
           <p class="profile__date">28 Jun 2020</p>
         </div>
         <figure class="share-icon">
-          <img src="images/icon-share.svg" alt="icon-share">
+          <img data-msg="" src="images/icon-share.svg" alt="icon-share">
         </figure>
       </section>
     </div>
   </main>
 
-  <!-- <div class="attribution"> -->
-  <!--   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. --> 
-  <!--   Coded by <a href="#">Your Name Here</a>. -->
-  <!-- </div> -->
 </body>
 </html>
