reset everything to default

--- a/index.html
+++ b/index.html
@@ -5,32 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Article preview component</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
 </head>
-<body class="flex-center">
+<body>
 
-  <main class="article">
-    <div>
-    <img class="article__img" src="images/drawers.jpg" alt="drawers">
-    </div>
-    <div class="article__content spacing">
-      <p class="article__title">Shift the overall look and feel by adding these wonderful touches to furniture in your home</p>
-      <p class=article__text>Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete./<p>
-      <section class="profile">
-        <img class="profile__img" src="images/avatar-michelle.jpg" alt="avatar-michelle">
-        <div>
-          <a class="profile__author">Michelle Appleton</a>
-          <p class="profile__date">28 Jun 2020</p>
-        </div>
-        <figure class="share-icon">
-          <img data-msg="" src="images/icon-share.svg" alt="icon-share">
-        </figure>
-      </section>
-    </div>
-  </main>
+Shift the overall look and feel by adding these wonderful touches to furniture in your home</p>
+Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. 
+I’ve got some simple tips to help you make any room feel complete.
+Michelle Appleton
+28 Jun 2020
 
 </body>
 </html>
